--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 certifi==2018.1.18
 chardet==3.0.4
+cheroot==6.0.0
+CherryPy==13.1.0
 idna==2.6
-requests==2.18.4
+more-itertools==4.0.1
+portend==2.2
+pypiwin32==220
+pytz==2017.3
+requests==2.7.0
+six==1.11.0
+telebot==0.0.3
+tempora==1.10
 urllib3==1.22
