--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
-certifi==2018.1.18
+certifi==2017.7.27.1
 chardet==3.0.4
-cheroot==6.0.0
-CherryPy==13.1.0
+click==6.7
+cx-Freeze==5.0.2
+first==2.0.1
+Flask==0.12.2
+gunicorn==19.7.1
 idna==2.6
-more-itertools==4.0.1
-portend==2.2
-pyTelegramBotAPI==3.5.1
-pytz==2017.3
+itsdangerous==0.24
+MarkupSafe==1.0
+pew==0.1.26
+pip-tools==1.9.0
+pipenv==7.1.0
+pythonz-bd==1.11.4
 requests==2.7.0
-six==1.11.0
+resumable-urlretrieve==0.1.5
+semver==2.7.8
+six==1.10.0
 telebot==0.0.3
-tempora==1.10
 urllib3==1.22
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+wxPython==4.0.0b2
